grid align fix

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -571,6 +571,7 @@ body {
 blockquote {
   font-style: italic;
   border-width: 0;
+  margin: 0; padding: 0;
   
   em {
     font-weight: bold;
